Fixed VH problem on iOS

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -300,7 +300,7 @@ img:not(.hero__img) {
     color: var(--color-base-lightest);
     display: flex;
     flex-direction: column;
-    height: calc(100vh - var(--nav-height));
+    min-height: 30rem; // Magic String: Do not change/remove
     justify-content: center;
     padding: var(--space-m);
     position: relative;
