--- a/_sass/pages/_cv.scss
+++ b/_sass/pages/_cv.scss
@@ -23,7 +23,6 @@
         justify-content: center;
         margin-left: auto;
         margin-right: auto;
-        min-height: calc(100vh - var(--nav-height));
         padding-bottom: var(--space-xl);
         padding-left: var(--space-m);
         padding-right: var(--space-m);
